--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -19,13 +19,14 @@ jobs:
         uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
         with:
           ruby-version: 2.6
+          bundler-cache: true
           
       - name: Install dependencies
         run: bundle install
 
       - name: Run tests
         run: bundle exec cucumber
-
+        
       - name: Deploy Pages
         if: always()
         uses: JamesIves/github-pages-deploy-action@v4
