--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -31,8 +31,8 @@ jobs:
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          allure_results: allure-results
-          allure_history: allure-history
+          allure_results: ./logs
+          allure_history: ./logs
           keep_reports: 20
           
       - name: Deploy report to Github Pages
