--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -15,8 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
+      - name: Set up Ruby 2.6
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.6
           bundler-cache: true
