--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -27,24 +27,23 @@ jobs:
       - name: Run tests
         run: bundle exec cucumber
         
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: logs
-          path: '*/logs/*'
-          
-      - name: Download allure-results
-        uses: actions/download-artifact@v3
-        with:
-          name: logs
- 
-      - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@master
+      - name: Get Allure history
+        uses: actions/checkout@v2
         if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Test local action
+        uses: ./allure-report-action
+        if: always()
+        id: allure-report
         with:
           allure_results: ./logs
-          allure_history: ./logs
-          keep_reports: 20
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
           
       - name: Deploy report to Github Pages
         if: always()
@@ -53,3 +52,4 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
+
