--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -41,10 +41,10 @@ jobs:
         if: always()
         #id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: ./logs
           #gh_pages: gh-pages
           #allure_report: allure-report
-          allure_history: allure-history
+          allure_history: ./logs
           keep_reports: 20
 
       - name: Deploy report to Github Pages
