--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -36,14 +36,12 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Allure Report action from marketplace
+      - name: Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
-        #id: allure-report
         with:
+          bundler-cache: true
           allure_results: ./logs
-          #gh_pages: gh-pages
-          #allure_report: allure-report
           allure_history: ./logs
           keep_reports: 20
 
