--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -41,10 +41,9 @@ jobs:
         if: always()
         id: allure-report
         with:
-          allure_results: ./logs
-          
-          allure_report: ./logs
-          allure_history: ./logs
+          allure_results: /logs
+          allure_report: /logs
+          allure_history: /logs
           keep_reports: 20
 
       - name: Deploy report to Github Pages
