--- a/.github/workflows/Rb_exec.yml
+++ b/.github/workflows/Rb_exec.yml
@@ -20,7 +20,35 @@ jobs:
         with:
           ruby-version: 2.6
           bundler-cache: true
+
       - name: Install dependencies
         run: bundle install
+
       - name: Run tests
         run: bundle exec cucumber
+      
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: ./logs
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
